# Cyborg-worker-node

./: .env.example  Cargo.toml  Dockerfile  README.md  cyborg-worker-node-installer.sh  input.json  registered_worker_config.json  task_owner.json  worker_config.json  worker_log.txt
.github/workflows/: CI.yml
docker/: Dockerfile  docker-installer.sh  supervisord.conf
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/worker/: custom_event_listener.rs  mod.rs
pallets/edge-connect/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/status-aggregator/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/task-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: oracle.rs  task.rs  worker.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
src/: builder.rs  cli.rs  error.rs  main.rs  metadata.scale  specs.rs  substrate_interface.rs  substrateclient.rs  worker.rs  zk_helper.rs
src/substrate_api/: mod.rs  substrate_client.rs  substrate_interface.rs
src/utils/: mod.rs  substrate_queries.rs  substrate_transactions.rs
src/worker/: donwloade_and_execute_tasks.rs  mod.rs  register_worker.rs  submit_results.rs  worker.rs  worker_spec.rs
src/worker_old/: mod.rs
src/zk-worker/: Makefile  setup.rs
work_package_binary/: somepackage
zk-worker/: Cargo.toml  Makefile  README.md  dummy_proof.json  worker_log.txt
zk-worker/src/: lib.rs
