[package]
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
description = "A standalone cyborg worker"
edition = "2021"
homepage = "https://cyborgnetwork.io/"
license = "Unlicense"
name = "cyborg-worker"
repository = "https://github.com/Cyborg-Network"
version = "0.1.0"


[dependencies]
#env_logger = "0.9"
clap = { version = "4.5.3", features = ["derive"] }
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = true, features = ["derive"]}
serde_json = { version = "1.0.114", default-features = true }
subxt = { version = "0.38.0", default-features = true }
tokio = { version = "1.41.0", features = ["full"] }
#substrate-api-client = { version = "0.18.0", features = ["tungstenite-client", "disable-metadata-hash-check"] }

[features]
default = []
