[package]
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
description = "A standalone cyborg worker"
edition = "2021"
homepage = "https://cyborgnetwork.io/"
license = "Unlicense"
name = "cyborg-worker"
repository = "https://github.com/Cyborg-Network"
version = "0.1.0"


[dependencies]
#env_logger = "0.9"
clap = { git ="https://github.com/clap-rs/clap.git", features = ["derive"] }
log = { git ="https://github.com/rust-lang/log.git", default-features = false }
serde = { git ="https://github.com/serde-rs/serde.git", default-features = true, features = ["derive"]}
serde_json = { git ="https://github.com/serde-rs/json.git", default-features = true }
subxt = {git = "https://github.com/paritytech/subxt"}
subxt-signer = { git = "https://github.com/paritytech/subxt" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk"}
tokio = { git = "https://github.com/tokio-rs/tokio.git", features = ["full"] }
async-trait = { git = "https://github.com/dtolnay/async-trait.git" }
futures = { git = "https://github.com/rust-lang/futures-rs.git"}
#substrate-api-client = { version = "0.18.0", features = ["tungstenite-client", "disable-metadata-hash-check"] }

[dev-dependencies]
mockall = { version = "0.13.0", features = ["nightly"]}

[features]
default = []
