[package]
name = "cyborg-worker-node"
description = "An edge-computing worker, designed to connect to the cyborg-network, built, among others with Polkadot Sdk. (polkadot v1.13.0)"
version = "0.1.0"
license = "Unlicense"
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
edition = "2021"
homepage = "https://cyborgnetwork.io/"
repository = "https://github.com/Cyborg-Network/cyborg-node/"
publish = false

# [[bin]]
# name = "cyborg-node"

[dependencies]
async-trait = { git = "https://github.com/dtolnay/async-trait.git" }
clap = { version = "4.5.3", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
color-print = { version = "0.3.4" } 
dirs = "5.0.1"
docify = { version = "0.2.8" }
futures = "0.3.28"
hex = { version = "0.4.3" } 
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-send-sync", "with-hyper-tls"] }
jsonrpsee = { version = "0.22", features = ["server"] }
log = { version = "0.4.21", default-features = false }
pinata-sdk = "1.1.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
sp-api = { version = "33.0.0", default-features = false }
sp-blockchain = { version = "35.0.0" }
sp-core = { version = "34.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
subxt = { version = "0.38" }
subxt-signer = "0.38.0"
sys-info = { version = "0.9.1" }
sysinfo = "0.32.0"
tokio = "1.41.0"
url = { version = "2.5.2" }

[build-dependencies]

[features]
default = []
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"sp-runtime/try-runtime",
]
